# diploma-work-StasiaGuard

./: .gitignore  CLAUDE.md
code/: .gitignore  CMakeLists.txt  README.md
code/docs/: dataflow.md  transport_protocol_explained.md
code/exporter/: Dockerfile  vpn_exporter.py
code/include/: anti_replay.h  config.h  crypto_engine.h  ipc_server.h  key_pair.h  key_store.h  metrics.h  noise_handshake.h  packet.h  padding_calculator.h  peer_info.h  peer_registry.h  routing_table.h  session.h  session_manager.h  tls_profile.h  tls_record_builder.h  traffic_profile.h  tun_device.h  vpn_daemon.h
code/src/: CMakeLists.txt  anti_replay.cpp  config.cpp  crypto_engine.cpp  ipc_server.cpp  key_pair.cpp  key_store.cpp  main.cpp  metrics.cpp  noise_handshake.cpp  packet.cpp  padding_calculator.cpp  peer_registry.cpp  routing_table.cpp  session.cpp  session_manager.cpp  tls_profile.cpp  tls_record_builder.cpp  tun_device.cpp  vpn_daemon.cpp
code/tests/: CMakeLists.txt  test_anti_replay.cpp  test_crypto.cpp  test_handshake.cpp  test_tun.cpp
